--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "pbkdf2-benchmark",
+  "name": "hmac-android42",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "dependencies": {
     "bip39": "^2.1.2",
     "browserify": "^11.0.1",
+    "create-hmac": "^1.1.4",
+    "cryptojs": "^2.5.3",
+    "hash-test-vectors": "^1.3.2",
     "pbkdf2": "^3.0.4",
     "serve": "^1.4.0",
-    "sjcl": "^1.0.3"
+    "sjcl": "^1.0.3",
+    "tape": "^4.2.0"
   },
   "devDependencies": {},
   "scripts": {
