--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ platforms/android/assets/www/*
 platforms/ios/www/*
 platforms/ios/cordova/console.log
 platforms/android/CordovaLib/build
+platforms/android/.gradle/2.2.1/taskArtifacts/*
