--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "create-hash": "^1.1.2",
     "create-hmac": "^1.1.4",
     "cryptojs": "^2.5.3",
+    "grunt": "^0.4.5",
+    "grunt-browserify": "^4.0.1",
+    "grunt-contrib-watch": "^0.6.1",
     "hash-test-vectors": "^1.3.2",
     "pbkdf2": "^3.0.4",
     "serve": "^1.4.0",
