--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "dependencies": {
     "bip39": "^2.1.2",
     "browserify": "^11.0.1",
+    "browserify-cryptojs": "^0.3.1",
     "create-hash": "^1.1.2",
     "create-hmac": "^1.1.4",
-    "cryptojs": "^2.5.3",
+    "crypto-js": "^3.1.5",
     "grunt": "^0.4.5",
     "grunt-browserify": "^4.0.1",
     "grunt-contrib-watch": "^0.6.1",
